--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "sequelize": "^6.19.0",
